crates/test-files/fixtures/compile_errors/return_call_to_fn_without_return.fe
contract Foo:

    pub def foo():
        revert

    pub def bar() -> u256:
        return self.foo()
